# tides-prediction

./: Cargo.toml  README.md
tides-app/: .gitignore  config-overrides.js  package.json
tides-app/src/: App.css  App.js  index.js
tides-app/src/app/: store.js
tides-app/src/components/chart/: Chart.js
tides-app/src/components/loading/: Loading.js
tides-app/src/components/panel/: LowHighTides.js  StationChooser.js
tides-app/src/components/station/: Station.js
tides-app/src/features/chart/: Chart.js
tides-app/src/features/panel/: LowHighTides.js  StationChooser.js
tides-app/src/features/station/: Station.js  fetch.js  index.js  measurementsSlice.js  predictionsSlice.js  stationSlice.js
tides-app/src/features/utils/: actions.js  fetch.js
tides-app/src/slices/: extremesSlice.js  index.js  loadingSlice.js  measurementsSlice.js  selectedStationSlice.js  stationsSlice.js
tides-app/src/utils/: actions.js  fetch.js
tides-prediction/: Cargo.toml
tides-rest/: Cargo.toml
tides-rest/src/: lib.rs  main.rs  measurements.rs  predictions.rs  stations.rs
tides-rest/tests/: fft.rs
tides-signals/: Cargo.toml
tides-signals/src/: fft.rs  least_squares.rs  lib.rs  measurements.rs  predictions.rs
tides-signals/src/least_squares/: constituents.rs
tides-signals/tests/: web.rs
tides-wasm/: Cargo.toml
tides-wasm/src/: lib.rs
tides-wasm/tests/: web.rs
