[package]
name = "tides-rest"
version = "0.1.0"
authors = ["Giacomo d'Antonio <giacomo.dantonio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.2.1", features = ["json-using-serde", "https-rustls"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tides-signals = { path = "../tides-signals" }
wasm-bindgen = "0.2.63"
