[package]
name = "tides-signals"
version = "0.1.0"
authors = ["Giacomo d'Antonio <giacomo.dantonio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustfft = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen = "0.2.63"
