[package]
name = "tides-signals"
version = "0.1.0"
authors = ["Giacomo d'Antonio <giacomo.dantonio@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# FIXME: remove this feature later, because it blows the binary size
[features]
default = ["console_error_panic_hook"]

[dependencies]
rustfft = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen = "0.2.63"

console_error_panic_hook = { version = "0.1.6", optional = true }

[dependencies.js-sys]
version = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
